[gd_scene load_steps=18 format=3 uid="uid://ba87btxkl1a6"]

[ext_resource type="Script" path="res://UnitPlacement/placement.gd" id="1_gqrju"]
[ext_resource type="PackedScene" uid="uid://be5cg4av3mk5x" path="res://unit/unit.tscn" id="2_kktaj"]
[ext_resource type="Script" path="res://UnitPlacement/placement_ui.gd" id="2_oj8ei"]
[ext_resource type="PackedScene" uid="uid://bnkbulg51h351" path="res://UnitPlacement/unit_holder.tscn" id="3_jraic"]
[ext_resource type="Script" path="res://unit/UnitResouces/UnitData/Friendly/UnitData.gd" id="3_pqkku"]
[ext_resource type="PackedScene" uid="uid://d12h27eryruqa" path="res://Dragables/drop_area.tscn" id="3_sqto0"]
[ext_resource type="Script" path="res://unit/UnitResouces/UnitAttacks/Unitattacks.gd" id="5_6ybw0"]
[ext_resource type="Script" path="res://unit/UnitResouces/stats/UnitStats.gd" id="6_yghe6"]
[ext_resource type="Script" path="res://EnemyDropmarker.gd" id="7_2i6nd"]
[ext_resource type="Script" path="res://unit/UnitResouces/UnitUpgradeStrategies/Base_Unit_Strategy.gd" id="7_awdeh"]
[ext_resource type="PackedScene" uid="uid://cj445lakton70" path="res://unit/UnitResouces/unitSpriteFrames/unitCollisionScenes/bowman_collision_shape_2d.tscn" id="8_2214h"]
[ext_resource type="SpriteFrames" uid="uid://cjs2tyf5pq18r" path="res://unit/UnitResouces/unitSpriteFrames/unitSpriteFramesBowman.tres" id="9_oes0d"]

[sub_resource type="Resource" id="Resource_jxl15"]
resource_local_to_scene = true
script = ExtResource("5_6ybw0")
attack_name = "Jumpshot"
attackdmg = 35.0
attack_desc = "Bowman jumps and shoots "
attack_anim_name = "attack1"
attack_ofset = Vector2(-20, 0)
attack_max_cooldown = 1
attack_on_cooldown = false
attack_reach = 2

[sub_resource type="Resource" id="Resource_77u6r"]
resource_local_to_scene = true
script = ExtResource("5_6ybw0")
attack_name = "Powershot"
attackdmg = 60.0
attack_desc = "Charges up a powerfull shot"
attack_anim_name = "attack2"
attack_ofset = Vector2(-60, 0)
attack_max_cooldown = 3
attack_on_cooldown = false
attack_reach = 3

[sub_resource type="Resource" id="Resource_fwad3"]
resource_local_to_scene = true
script = ExtResource("6_yghe6")
name = "Bowman"
speed = 15
health = 50.0
mana = 20.0
strenght = 8
inteligence = 5
defense = 0.0
main_modifier = 0

[sub_resource type="Resource" id="Resource_b2jmt"]
resource_local_to_scene = true
script = ExtResource("3_pqkku")
spriteFrames = ExtResource("9_oes0d")
unitStats = SubResource("Resource_fwad3")
unitAttacks = Array[ExtResource("5_6ybw0")]([SubResource("Resource_jxl15"), SubResource("Resource_77u6r")])
anim_flip = false
unitStrategies = Array[ExtResource("7_awdeh")]([])
collisionForDragable = ExtResource("8_2214h")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nsiv7"]

[node name="Placement" type="Node2D" node_paths=PackedStringArray("placementUI", "unitHolder", "row1", "row2", "row3", "row4", "row5", "row6") groups=["UnitPlacer"]]
script = ExtResource("1_gqrju")
unitScene = ExtResource("2_kktaj")
placementUI = NodePath("placementUI")
unitHolder = NodePath("UnitHolder")
row1 = NodePath("row1")
row2 = NodePath("row2")
row3 = NodePath("row3")
availableEnemyUnitsArray = Array[ExtResource("3_pqkku")]([SubResource("Resource_b2jmt")])
row4 = NodePath("row4")
row5 = NodePath("row5")
row6 = NodePath("row6")

[node name="row1" type="Node2D" parent="."]

[node name="DropArea" parent="row1" instance=ExtResource("3_sqto0")]
position = Vector2(159, 109)

[node name="CollisionShape2D" type="CollisionShape2D" parent="row1/DropArea"]
shape = SubResource("RectangleShape2D_nsiv7")

[node name="DropArea2" parent="row1" instance=ExtResource("3_sqto0")]
position = Vector2(162, 164)

[node name="CollisionShape2D" type="CollisionShape2D" parent="row1/DropArea2"]
shape = SubResource("RectangleShape2D_nsiv7")

[node name="DropArea3" parent="row1" instance=ExtResource("3_sqto0")]
position = Vector2(161, 229)

[node name="CollisionShape2D" type="CollisionShape2D" parent="row1/DropArea3"]
shape = SubResource("RectangleShape2D_nsiv7")

[node name="row2" type="Node2D" parent="."]

[node name="DropArea" parent="row2" instance=ExtResource("3_sqto0")]
position = Vector2(95, 105)

[node name="CollisionShape2D" type="CollisionShape2D" parent="row2/DropArea"]
shape = SubResource("RectangleShape2D_nsiv7")

[node name="DropArea2" parent="row2" instance=ExtResource("3_sqto0")]
position = Vector2(98, 171)

[node name="CollisionShape2D" type="CollisionShape2D" parent="row2/DropArea2"]
shape = SubResource("RectangleShape2D_nsiv7")

[node name="DropArea3" parent="row2" instance=ExtResource("3_sqto0")]
position = Vector2(97, 234)

[node name="CollisionShape2D" type="CollisionShape2D" parent="row2/DropArea3"]
shape = SubResource("RectangleShape2D_nsiv7")

[node name="row3" type="Node2D" parent="."]
position = Vector2(1, 0)

[node name="DropArea" parent="row3" instance=ExtResource("3_sqto0")]
position = Vector2(36, 106)

[node name="CollisionShape2D" type="CollisionShape2D" parent="row3/DropArea"]
shape = SubResource("RectangleShape2D_nsiv7")

[node name="DropArea2" parent="row3" instance=ExtResource("3_sqto0")]
position = Vector2(37, 169)

[node name="CollisionShape2D" type="CollisionShape2D" parent="row3/DropArea2"]
shape = SubResource("RectangleShape2D_nsiv7")

[node name="DropArea3" parent="row3" instance=ExtResource("3_sqto0")]
position = Vector2(33, 236)

[node name="CollisionShape2D" type="CollisionShape2D" parent="row3/DropArea3"]
shape = SubResource("RectangleShape2D_nsiv7")

[node name="row4" type="Node2D" parent="."]
position = Vector2(1, 1)

[node name="Marker2D" type="Marker2D" parent="row4"]
position = Vector2(319, 93)
script = ExtResource("7_2i6nd")

[node name="Marker2D2" type="Marker2D" parent="row4"]
position = Vector2(336, 139)
script = ExtResource("7_2i6nd")

[node name="Marker2D3" type="Marker2D" parent="row4"]
position = Vector2(322, 199)
script = ExtResource("7_2i6nd")

[node name="Marker2D4" type="Marker2D" parent="row4"]
position = Vector2(275, 122)
script = ExtResource("7_2i6nd")

[node name="Marker2D5" type="Marker2D" parent="row4"]
position = Vector2(292, 168)
script = ExtResource("7_2i6nd")

[node name="Marker2D6" type="Marker2D" parent="row4"]
position = Vector2(278, 228)
script = ExtResource("7_2i6nd")

[node name="Marker2D7" type="Marker2D" parent="row4"]
position = Vector2(352, 94)
script = ExtResource("7_2i6nd")

[node name="Marker2D8" type="Marker2D" parent="row4"]
position = Vector2(369, 140)
script = ExtResource("7_2i6nd")

[node name="Marker2D9" type="Marker2D" parent="row4"]
position = Vector2(355, 200)
script = ExtResource("7_2i6nd")

[node name="Marker2D10" type="Marker2D" parent="row4"]
position = Vector2(308, 123)
script = ExtResource("7_2i6nd")

[node name="Marker2D11" type="Marker2D" parent="row4"]
position = Vector2(325, 169)
script = ExtResource("7_2i6nd")

[node name="Marker2D12" type="Marker2D" parent="row4"]
position = Vector2(311, 229)
script = ExtResource("7_2i6nd")

[node name="row5" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="row5"]
position = Vector2(398, 87)
script = ExtResource("7_2i6nd")

[node name="Marker2D2" type="Marker2D" parent="row5"]
position = Vector2(415, 133)
script = ExtResource("7_2i6nd")

[node name="Marker2D3" type="Marker2D" parent="row5"]
position = Vector2(401, 193)
script = ExtResource("7_2i6nd")

[node name="Marker2D4" type="Marker2D" parent="row5"]
position = Vector2(457, 100)
script = ExtResource("7_2i6nd")

[node name="Marker2D5" type="Marker2D" parent="row5"]
position = Vector2(474, 146)
script = ExtResource("7_2i6nd")

[node name="Marker2D6" type="Marker2D" parent="row5"]
position = Vector2(460, 206)
script = ExtResource("7_2i6nd")

[node name="Marker2D7" type="Marker2D" parent="row5"]
position = Vector2(432, 87)
script = ExtResource("7_2i6nd")

[node name="Marker2D8" type="Marker2D" parent="row5"]
position = Vector2(449, 133)
script = ExtResource("7_2i6nd")

[node name="Marker2D9" type="Marker2D" parent="row5"]
position = Vector2(435, 193)
script = ExtResource("7_2i6nd")

[node name="Marker2D10" type="Marker2D" parent="row5"]
position = Vector2(491, 100)
script = ExtResource("7_2i6nd")

[node name="Marker2D11" type="Marker2D" parent="row5"]
position = Vector2(508, 146)
script = ExtResource("7_2i6nd")

[node name="Marker2D12" type="Marker2D" parent="row5"]
position = Vector2(494, 206)
script = ExtResource("7_2i6nd")

[node name="row6" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="row6"]
position = Vector2(531, 97)
script = ExtResource("7_2i6nd")

[node name="Marker2D2" type="Marker2D" parent="row6"]
position = Vector2(548, 143)
script = ExtResource("7_2i6nd")

[node name="Marker2D3" type="Marker2D" parent="row6"]
position = Vector2(534, 203)
script = ExtResource("7_2i6nd")

[node name="Marker2D4" type="Marker2D" parent="row6"]
position = Vector2(536, 70)
script = ExtResource("7_2i6nd")

[node name="Marker2D5" type="Marker2D" parent="row6"]
position = Vector2(553, 116)
script = ExtResource("7_2i6nd")

[node name="Marker2D6" type="Marker2D" parent="row6"]
position = Vector2(539, 176)
script = ExtResource("7_2i6nd")

[node name="Marker2D7" type="Marker2D" parent="row6"]
position = Vector2(558, 93)
script = ExtResource("7_2i6nd")

[node name="Marker2D8" type="Marker2D" parent="row6"]
position = Vector2(575, 139)
script = ExtResource("7_2i6nd")

[node name="Marker2D9" type="Marker2D" parent="row6"]
position = Vector2(561, 199)
script = ExtResource("7_2i6nd")

[node name="Marker2D10" type="Marker2D" parent="row6"]
position = Vector2(563, 66)
script = ExtResource("7_2i6nd")

[node name="Marker2D11" type="Marker2D" parent="row6"]
position = Vector2(580, 112)
script = ExtResource("7_2i6nd")

[node name="Marker2D12" type="Marker2D" parent="row6"]
position = Vector2(566, 172)
script = ExtResource("7_2i6nd")

[node name="UnitHolder" parent="." instance=ExtResource("3_jraic")]

[node name="Marker2D10" type="Marker2D" parent="UnitHolder"]
position = Vector2(20, 38)

[node name="Marker2D11" type="Marker2D" parent="UnitHolder"]
position = Vector2(74, 40)

[node name="Marker2D12" type="Marker2D" parent="UnitHolder"]
position = Vector2(123, 39)

[node name="Marker2D13" type="Marker2D" parent="UnitHolder"]
position = Vector2(168, 40)

[node name="Marker2D14" type="Marker2D" parent="UnitHolder"]
position = Vector2(208, 40)

[node name="Marker2D15" type="Marker2D" parent="UnitHolder"]
position = Vector2(254, 40)

[node name="Marker2D16" type="Marker2D" parent="UnitHolder"]
position = Vector2(295, 40)

[node name="Marker2D17" type="Marker2D" parent="UnitHolder"]
position = Vector2(331, 39)

[node name="Marker2D18" type="Marker2D" parent="UnitHolder"]
position = Vector2(372, 37)

[node name="placementUI" type="CanvasLayer" parent="."]
script = ExtResource("2_oj8ei")

[node name="Control" type="Control" parent="placementUI"]
layout_mode = 3
anchors_preset = 0
offset_left = 958.0
offset_top = 588.0
offset_right = 1113.0
offset_bottom = 628.0

[node name="Button" type="Button" parent="placementUI/Control"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "confirm placement"

[connection signal="pressed" from="placementUI/Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="placementUI/Control/Button" to="UnitHolder" method="_on_button_pressed"]
